# Pharmacync

./: .gitignore  README.md
Start/: CMakeLists.txt  Constants.qml  TODO.org  dataStructure.sql  main.cpp  qtquickcontrols2.conf  ressource.qrc
Start/Qml/: Main.qml  test.js
Start/Qml/DataHandlers/: Composition.qml  MedicamentPreview.qml  Presentation.qml  PresentationProduit.qml  Produit.qml  ProduitPreview.qml  Specialite.qml
Start/Qml/Dialogs/: AjoutStockMedicamentDialog-bak.qml  AjoutStockMedicamentDialog.qml  AjoutStockPresentation.qml  AjoutStockPresentationProduit.qml  AjoutStockProduitDialog.qml  ChoisirMedicamentDialog.qml  ChoisirProdtuiDialog.qml  DictionnaireMedicamentDialog.qml  DictionnaireProduitDialog.qml  EntreStockDialog.qml  StockMedicamentDialog.qml  StockProduitDialog.qml  UtilisateurDialog.qml
Start/Qml/Dialogs/Configuration/Utilisateur/: Suppression.qml
Start/Qml/Dialogs/Ventes/Factures/: AjoutProduit.qml  Edit.qml
Start/Qml/Menus/: Configuration.qml  ConfigurationUtilisateurs.qml  CreationVente.qml  Dictionnaire.qml  DictionnaireMedicament.qml  DictionnaireProduit.qml  Factures.qml  Inventaire.qml  InventaireMedicament.qml  InventaireProduit.qml  Stock.qml  StockMedicament.qml  StockProduit.qml  Ventes.qml
Start/Qml/Screens/: Login.qml  LoginForm.ui.qml  Menu.qml  MenuForm.ui.qml
Start/Qml/Utils/: functions.mjs
Start/Qml/Widgets/: CDateField.qml  CNumberField.qml  CNumberPreviousField.qml  CTimeField.qml  CToolButton.qml  CustomComboBox.qml  CustomLabelField.qml  CustomTextField.qml  CustomTextLabelField.qml  Facture.qml  NumberField.qml  Table.qml  TableAndFilter.qml  VenteBoard.qml
Start/core/: database.cpp  database.h  tableModel.cpp  tableModel.h
Start/engines/: facture.cpp  facture.h  loginEngine.cpp  loginEngine.h  painterEngine.cpp  painterEngine.h  sqlImageProvider.cpp  sqlImageProvider.h  sqlQueryEngine.cpp  sqlQueryEngine.h  statistics.cpp  statistics.h
Start/python_script/: data_simulation.py
